--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "vercel --prod"
   },
   "devDependencies": {
+    "gsap": "^3.11.5",
     "vite": "^4.0.4"
   },
   "dependencies": {
